src/test/ui/issues/issue-19482.stderr
error[E0191]: the value of the associated type `A` (from the trait `Foo`) must be specified
  --> $DIR/issue-19482.rs:20:12
   |
LL | fn bar(x: &Foo) {}
   |            ^^^ missing associated type `A` value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
